sonarqube fixes